# automacao_chuva

./: .gitignore  .pre-commit-config.yaml  database.db  main.py  pyproject.toml  requirements.txt
src/: alerta.py  chuva.py  elemento.py  info.py  message.py  run.py  tuya.py
src/database/: model.py
test/: test_alerta.py  test_intensidade.py  test_tuya.py
tests/: test_elemento.py  test_intensidade.py  test_tuya.py
