[tool.poetry]
name = "alerta_rio"
version = "0.0.1"
description = "Sistema de alerta das chuvas."
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.0"
tuya-iot-py-sdk = "^0.6.3"
webdriver-manager = "^3.5.2"
schedule = "^1.1.0"
pytest-sugar = "^0.9.4"
"pushbullet.py" = "^0.12.0"
sqlmodel = "^0.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
